--- a/index.html
+++ b/index.html
@@ -363,6 +363,143 @@
         </div>
       </div>
     </section>
+    <section class="sale container">
+      <svg
+        class="sale__arrow-left"
+        width="8"
+        height="14"
+        viewBox="0 0 8 14"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M6.7121 0.722986L0.882351 6.82927C0.779961 6.93653 0.722656 7.08038 0.722656 7.23016C0.722656 7.37993 0.779961 7.52378 0.882351 7.63104L6.7121 13.7396C6.7598 13.7896 6.81682 13.8294 6.87981 13.8565C6.9428 13.8837 7.01048 13.8977 7.07885 13.8977C7.14722 13.8977 7.2149 13.8837 7.27789 13.8565C7.34088 13.8294 7.39791 13.7896 7.4456 13.7396C7.54373 13.6371 7.59866 13.4994 7.59866 13.356C7.59866 13.2126 7.54373 13.0749 7.4456 12.9723L1.96348 7.23016L7.4456 1.48914C7.54339 1.38662 7.59811 1.24917 7.59811 1.10606C7.59811 0.962958 7.54339 0.825506 7.4456 0.722986C7.39791 0.672969 7.34088 0.633215 7.27789 0.606071C7.2149 0.578926 7.14722 0.564941 7.07885 0.564941C7.01048 0.564941 6.9428 0.578926 6.87981 0.606071C6.81682 0.633215 6.7598 0.672969 6.7121 0.722986Z"
+          fill="Currentcolor"
+          fill-opacity="0.69"
+        />
+      </svg>
+      <svg
+        class="sale__arrow-right"
+        width="8"
+        height="14"
+        viewBox="0 0 8 14"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M6.7121 0.722986L0.882351 6.82927C0.779961 6.93653 0.722656 7.08038 0.722656 7.23016C0.722656 7.37993 0.779961 7.52378 0.882351 7.63104L6.7121 13.7396C6.7598 13.7896 6.81682 13.8294 6.87981 13.8565C6.9428 13.8837 7.01048 13.8977 7.07885 13.8977C7.14722 13.8977 7.2149 13.8837 7.27789 13.8565C7.34088 13.8294 7.39791 13.7896 7.4456 13.7396C7.54373 13.6371 7.59866 13.4994 7.59866 13.356C7.59866 13.2126 7.54373 13.0749 7.4456 12.9723L1.96348 7.23016L7.4456 1.48914C7.54339 1.38662 7.59811 1.24917 7.59811 1.10606C7.59811 0.962958 7.54339 0.825506 7.4456 0.722986C7.39791 0.672969 7.34088 0.633215 7.27789 0.606071C7.2149 0.578926 7.14722 0.564941 7.07885 0.564941C7.01048 0.564941 6.9428 0.578926 6.87981 0.606071C6.81682 0.633215 6.7598 0.672969 6.7121 0.722986Z"
+          fill="Currentcolor"
+          fill-opacity="0.69"
+        />
+      </svg>
+      <div class="sale__title-block">
+        <h2 class="sale-title">Успей купить</h2>
+        <a class="mobile-button"> Все </a>
+      </div>
+
+      <div class="sale__cards">
+        <div class="sale__card">
+          <img
+            class="sale__photo"
+            src="./images/new-collection/1.jpg"
+            alt="Наряд №1"
+          />
+          <svg
+            class="button-like"
+            width="512"
+            height="512"
+            viewBox="0 0 512 512"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M83.9411 142.294C122.891 63.1439 255.67 91.5061 255.67 142.294H256.33C256.33 91.5061 389.109 63.1439 428.059 142.294C484.667 257.326 342.294 357.51 257.204 417.385L256.33 418H255.67L254.795 417.385C169.706 357.51 27.3328 257.326 83.9411 142.294Z"
+              stroke="currentcolor"
+              stroke-width="24"
+            />
+          </svg>
+          <div class="sale__card-text">
+            <p class="sale__card-name">Платье в полоску с запахом</p>
+            <p class="sale__card-price">6 999 руб.</p>
+          </div>
+        </div>
+        <div class="sale__card">
+          <img
+            class="sale__photo"
+            src="./images/new-collection/2.jpg"
+            alt="Наряд №1"
+          />
+          <svg
+            class="button-like"
+            width="512"
+            height="512"
+            viewBox="0 0 512 512"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M83.9411 142.294C122.891 63.1439 255.67 91.5061 255.67 142.294H256.33C256.33 91.5061 389.109 63.1439 428.059 142.294C484.667 257.326 342.294 357.51 257.204 417.385L256.33 418H255.67L254.795 417.385C169.706 357.51 27.3328 257.326 83.9411 142.294Z"
+              stroke="currentcolor"
+              stroke-width="24"
+            />
+          </svg>
+          <div class="sale__card-text">
+            <p class="sale__card-name">Объемный пиджак</p>
+            <p class="sale__card-price">12 999 руб.</p>
+          </div>
+        </div>
+        <div class="sale__card">
+          <img
+            class="sale__photo"
+            src="./images/new-collection/3.jpg"
+            alt="Наряд №1"
+          />
+          <svg
+            class="button-like"
+            width="512"
+            height="512"
+            viewBox="0 0 512 512"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M83.9411 142.294C122.891 63.1439 255.67 91.5061 255.67 142.294H256.33C256.33 91.5061 389.109 63.1439 428.059 142.294C484.667 257.326 342.294 357.51 257.204 417.385L256.33 418H255.67L254.795 417.385C169.706 357.51 27.3328 257.326 83.9411 142.294Z"
+              stroke="currentcolor"
+              stroke-width="24"
+            />
+          </svg>
+          <div class="sale__card-text">
+            <p class="sale__card-name">Комбинезон с принтом</p>
+            <p class="sale__card-price">6 999 руб.</p>
+          </div>
+        </div>
+        <div class="sale__card">
+          <img
+            class="sale__photo"
+            src="./images/new-collection/4.jpg"
+            alt="Наряд №1"
+          />
+          <svg
+            class="button-like"
+            width="512"
+            height="512"
+            viewBox="0 0 512 512"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M83.9411 142.294C122.891 63.1439 255.67 91.5061 255.67 142.294H256.33C256.33 91.5061 389.109 63.1439 428.059 142.294C484.667 257.326 342.294 357.51 257.204 417.385L256.33 418H255.67L254.795 417.385C169.706 357.51 27.3328 257.326 83.9411 142.294Z"
+              stroke="currentcolor"
+              stroke-width="24"
+            />
+          </svg>
+          <div class="sale__card-text">
+            <p class="sale__card-name">Атласный топ-комбинация</p>
+            <p class="sale__card-price">2 799 руб.</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer class="footer">
       <div class="footer__container container">
         <div class="footer__block-logo">
